# ia_test

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  speckit-blis-ai.md
.specify/memory/: constitution.md
api/: .dockerignore  .env.example  Dockerfile  pyproject.toml
api/scripts/: healthcheck.py  ingest_documents.py
api/src/: config.py  main.py
api/src/agents/: faq_agent.py  orchestrator.py  search_agent.py
api/src/api/: dependencies.py  schemas.py
api/src/api/routes/: chat.py
api/src/core/: checkpointer.py  logging.py
api/src/rag/: ingest.py  prompts.py  vectorstore.py
api/src/state/: graph_state.py
api/src/tools/: rag_retriever.py  web_search.py
api/tests/: conftest.py  test_chat_endpoint.py  test_faq_agent.py  test_orchestrator.py  test_search_agent.py
specs/001-multi-agent-travel/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-multi-agent-travel/checklists/: requirements.md
specs/001-multi-agent-travel/contracts/: api.md
web/: .dockerignore  .env.example  Dockerfile  package-lock.json  package.json
web/src/app/: layout.tsx  page.tsx
web/src/components/: ChatInput.tsx  ChatMessage.tsx
