[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "blis-travel-agents"
version = "1.0.0"
description = "Multi-agent travel assistant with FAQ (RAG) and Search agents"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "langgraph>=0.2",
    "langchain-openai>=0.2",
    "langchain-community>=0.3",
    "langchain-text-splitters>=0.3",
    "faiss-cpu>=1.8",
    "tavily-python>=0.5",
    "langgraph-checkpoint-redis>=0.3.5",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "structlog>=24.0",
    "sse-starlette>=2.0",
    "pdfplumber>=0.11",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
